<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/heading_normal_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_home"
        app:layout_constraintEnd_toStartOf="@+id/imageView_home"
        app:layout_constraintTop_toTopOf="@+id/imageView_home"
        tools:text="تازه ترین شیرینی ها" />

    <ImageView
        android:id="@+id/imageView_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/f_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_f" />

    <ImageView
        android:id="@+id/imageView_cake"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/arrow"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitle"
        app:srcCompat="@drawable/ic_arrow_all" />

    <TextView
        android:id="@+id/txtAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/all"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/text_large_size"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_cake"
        app:layout_constraintStart_toEndOf="@+id/imageView_cake"
        app:layout_constraintTop_toTopOf="@+id/imageView_cake"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_home"
        app:layout_constraintStart_toStartOf="@+id/imageView_cake"
        app:layout_constraintTop_toBottomOf="@+id/imageView_home" />

</androidx.constraintlayout.widget.ConstraintLayout>