<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <View
        android:id="@+id/view_back"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@drawable/back_top_view_bottom_nav"
        app:layout_constraintBottom_toTopOf="@+id/view_back"
        app:layout_constraintEnd_toEndOf="@+id/view_back"
        app:layout_constraintStart_toStartOf="@+id/view_back" />

    <View
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@drawable/back_item_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cake" />

    <View
        android:id="@+id/cake"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/home"
        app:layout_constraintEnd_toStartOf="@+id/home"
        app:layout_constraintStart_toEndOf="@+id/shopping"
        app:layout_constraintTop_toTopOf="@+id/home" />

    <View
        android:id="@+id/shopping"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cake"
        app:layout_constraintEnd_toStartOf="@+id/cake"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pastry"
        app:layout_constraintTop_toTopOf="@+id/cake" />

    <View
        android:id="@+id/pastry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/shopping"
        app:layout_constraintEnd_toStartOf="@+id/shopping"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/shopping" />

    <View
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/pastry"
        app:layout_constraintEnd_toStartOf="@+id/pastry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pastry" />

    <ImageView
        android:id="@+id/imageView_home"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_home"
        app:layout_constraintBottom_toBottomOf="@+id/home"
        app:layout_constraintEnd_toEndOf="@+id/home"
        app:layout_constraintStart_toStartOf="@+id/home"
        app:layout_constraintTop_toTopOf="@+id/home"
        app:srcCompat="@drawable/ic_home" />

    <ImageView
        android:id="@+id/imageView_cake"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_cake"
        app:layout_constraintBottom_toBottomOf="@+id/cake"
        app:layout_constraintEnd_toEndOf="@+id/cake"
        app:layout_constraintStart_toStartOf="@+id/cake"
        app:layout_constraintTop_toTopOf="@+id/cake"
        app:srcCompat="@drawable/ic_cake" />

    <ImageView
        android:id="@+id/imageView_pastry"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_pastry"
        app:layout_constraintBottom_toBottomOf="@+id/pastry"
        app:layout_constraintEnd_toEndOf="@+id/pastry"
        app:layout_constraintStart_toStartOf="@+id/pastry"
        app:layout_constraintTop_toTopOf="@+id/pastry"
        app:srcCompat="@drawable/ic_pastry" />

    <ImageView
        android:id="@+id/imageView_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image_profile"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/shoppingCart"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:contentDescription="@string/image_shopping"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imageView_pastry"
        app:layout_constraintEnd_toStartOf="@+id/cake"
        app:layout_constraintStart_toStartOf="@+id/shopping"
        app:layout_constraintTop_toTopOf="@+id/imageView_pastry"
        app:srcCompat="@drawable/ic_polygon" />

    <ImageView
        android:id="@+id/imageView_shopping"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/image_shopping"
        app:layout_constraintBottom_toBottomOf="@+id/shoppingCart"
        app:layout_constraintEnd_toEndOf="@+id/shoppingCart"
        app:layout_constraintStart_toStartOf="@+id/shoppingCart"
        app:layout_constraintTop_toTopOf="@+id/shoppingCart"
        app:srcCompat="@drawable/ic_shopping_cart" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/off"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="view_red,txtShoppingCount" />

    <View
        android:id="@+id/view_red"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/back_circle_shopping_cart"
        app:layout_constraintBottom_toTopOf="@+id/imageView_shopping"
        app:layout_constraintEnd_toEndOf="@+id/imageView_shopping"
        app:layout_constraintStart_toEndOf="@+id/imageView_shopping"
        app:layout_constraintTop_toTopOf="@+id/imageView_shopping" />

    <TextView
        android:id="@+id/txtShoppingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="99"
        android:textSize="11sp"
        android:textColor="@color/white_main"
        app:layout_constraintBottom_toBottomOf="@+id/view_red"
        app:layout_constraintEnd_toEndOf="@+id/view_red"
        app:layout_constraintStart_toStartOf="@+id/view_red"
        app:layout_constraintTop_toTopOf="@+id/view_red" />

</androidx.constraintlayout.widget.ConstraintLayout>